<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout android:orientation="vertical" android:background="@android:color/transparent" android:paddingLeft="5.0px" android:paddingRight="5.0px" android:layout_width="fill_parent" android:layout_height="fill_parent"  
        xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_weight="0.52"
                    android:paddingBottom="15.0dip"
                    android:paddingLeft="15.0dip"
                    android:text="@string/pre_comment_geo"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:layout_gravity="left"
                    android:gravity="left" 
                    />

                <EditText
                    android:id="@+id/et_desc_g30"
                    android:layout_width="150dp"
                    android:editable="true"
                    android:focusable="true"
                    android:maxLength="20" />
            </LinearLayout>

            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:id="@+id/b_insert_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/b_close" android:layout_weight="1.0"  />
                <Button android:id="@+id/b_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/b_ok" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>